[package]
name = "fakerng"
version = "0.1.0"
authors = ["gyu-don <takumi.kt+git@gmail.com>"]
edition = "2018"
description = "Fake RngCore"
license = "Apache-2.0"
repository = "https://github.com/quantum-lay/fakerng"
publish = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand_core = "0.6.2"
